fix for camera overlay when/if user returns to take pic - just noticed the main footer overlaps the screen.

--- a/demoAppDev/app/styles/camera-overlay.less
+++ b/demoAppDev/app/styles/camera-overlay.less
@@ -6,6 +6,7 @@
     position: fixed;
     width: 100%;
     height: 100%;
+    z-index: 1;
 }
 
 .canvas-container {
